--- a/WindowsAudioInputDevice/WindowsAudioInputDevice.vcxproj
+++ b/WindowsAudioInputDevice/WindowsAudioInputDevice.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{6B669166-36AB-497A-8EDA-86B5F8419659}</ProjectGuid>
-    <RootNamespace>proxyServer</RootNamespace>
+    <ProjectGuid>{B4E5C216-1E0C-4524-A47C-5728BF80FAF4}</ProjectGuid>
+    <RootNamespace>WindowsAudioInputDevice</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -74,11 +74,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../BasicUsageEnvironment/include;../groupsock/include;../liveMedia/include;../UsageEnvironment/include;</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>BasicUsageEnvironment.lib;groupsock.lib;liveMedia.lib;UsageEnvironment.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
+      <AdditionalDependencies>BasicUsageEnvironment.lib;UsageEnvironment.lib;groupsock.lib;liveMedia.lib;%(AdditionalDependencies);winmm.lib;ws2_32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>../Debug</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -97,12 +97,12 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>../BasicUsageEnvironment/include;../groupsock/include;../liveMedia/include;../UsageEnvironment/include;</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>BasicUsageEnvironment.lib;groupsock.lib;liveMedia.lib;UsageEnvironment.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
+      <AdditionalDependencies>BasicUsageEnvironment.lib;UsageEnvironment.lib;groupsock.lib;liveMedia.lib;%(AdditionalDependencies);</AdditionalDependencies>
       <AdditionalLibraryDirectories>../Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -120,7 +120,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="live555ProxyServer.cpp" />
+    <ClCompile Include="showAudioInputPorts.cpp" />
+    <ClCompile Include="WindowsAudioInputDevice_common.cpp" />
+    <ClCompile Include="WindowsAudioInputDevice_mixer.cpp" />
+    <ClCompile Include="WindowsAudioInputDevice_noMixer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="WindowsAudioInputDevice_common.hh" />
+    <ClInclude Include="WindowsAudioInputDevice_mixer.hh" />
+    <ClInclude Include="WindowsAudioInputDevice_noMixer.hh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
