--- a/testProgs/testProgs.vcxproj
+++ b/testProgs/testProgs.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{6B669166-36AB-497A-8EDA-86B5F8419659}</ProjectGuid>
-    <RootNamespace>proxyServer</RootNamespace>
+    <ProjectGuid>{AF6ED0F9-684A-462B-8231-904E58454340}</ProjectGuid>
+    <RootNamespace>testProgs</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -74,13 +74,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../BasicUsageEnvironment/include;../groupsock/include;../liveMedia/include;../UsageEnvironment/include;</AdditionalIncludeDirectories>
     </ClCompile>
-    <Link>
-      <AdditionalDependencies>BasicUsageEnvironment.lib;groupsock.lib;liveMedia.lib;UsageEnvironment.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../Debug</AdditionalLibraryDirectories>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -96,14 +90,10 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>../BasicUsageEnvironment/include;../groupsock/include;../liveMedia/include;../UsageEnvironment/include;</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);_CRT_SECURE_NO_WARNINGS;</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>BasicUsageEnvironment.lib;groupsock.lib;liveMedia.lib;UsageEnvironment.lib;%(AdditionalDependencies);ws2_32.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>../Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -120,7 +110,41 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="live555ProxyServer.cpp" />
+    <ClCompile Include="MPEG2TransportStreamIndexer.cpp" />
+    <ClCompile Include="openRTSP.cpp" />
+    <ClCompile Include="playCommon.cpp" />
+    <ClCompile Include="playSIP.cpp" />
+    <ClCompile Include="registerRTSPStream.cpp" />
+    <ClCompile Include="sapWatch.cpp" />
+    <ClCompile Include="testAMRAudioStreamer.cpp" />
+    <ClCompile Include="testDVVideoStreamer.cpp" />
+    <ClCompile Include="testGSMStreamer.cpp" />
+    <ClCompile Include="testH264VideoStreamer.cpp" />
+    <ClCompile Include="testH264VideoToTransportStream.cpp" />
+    <ClCompile Include="testH265VideoStreamer.cpp" />
+    <ClCompile Include="testH265VideoToTransportStream.cpp" />
+    <ClCompile Include="testMKVStreamer.cpp" />
+    <ClCompile Include="testMP3Receiver.cpp" />
+    <ClCompile Include="testMP3Streamer.cpp" />
+    <ClCompile Include="testMPEG1or2AudioVideoStreamer.cpp" />
+    <ClCompile Include="testMPEG1or2ProgramToTransportStream.cpp" />
+    <ClCompile Include="testMPEG1or2Splitter.cpp" />
+    <ClCompile Include="testMPEG1or2VideoReceiver.cpp" />
+    <ClCompile Include="testMPEG1or2VideoStreamer.cpp" />
+    <ClCompile Include="testMPEG2TransportReceiver.cpp" />
+    <ClCompile Include="testMPEG2TransportStreamer.cpp" />
+    <ClCompile Include="testMPEG2TransportStreamTrickPlay.cpp" />
+    <ClCompile Include="testMPEG4VideoStreamer.cpp" />
+    <ClCompile Include="testOggStreamer.cpp" />
+    <ClCompile Include="testOnDemandRTSPServer.cpp" />
+    <ClCompile Include="testRelay.cpp" />
+    <ClCompile Include="testReplicator.cpp" />
+    <ClCompile Include="testRTSPClient.cpp" />
+    <ClCompile Include="testWAVAudioStreamer.cpp" />
+    <ClCompile Include="vobStreamer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="playCommon.hh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
